<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classs"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/name_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/area_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/degree_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clash"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/clash_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clash"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/address_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/email_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/tel_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etc"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/etc_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/name_tutor_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.example.melodyhacker.tutor.Font.CTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/last_name_tutor_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tutor"
                android:textSize="@dimen/font_size" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/icon" />
</LinearLayout>