<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:padding="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/icon" />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/users" />

            <com.example.melodyhacker.tutor.Font.CTextView

                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="@dimen/font_size" />


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/name" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="@dimen/font_size" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/last_name"
                android:textSize="@dimen/font_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/where" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/font_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/tel" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tel"
                android:textSize="@dimen/font_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/etc" />

            <com.example.melodyhacker.tutor.Font.CTextView
                android:id="@+id/etc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/etc"
                android:textSize="@dimen/font_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="20dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bw"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/seach"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/search" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/edit" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/list"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/student" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/ratting"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ratting" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/see"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/see" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <ImageView
                android:id="@+id/exit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/no" />

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>